--- a/frontend/src/components/LineByLineBar.css
+++ b/frontend/src/components/LineByLineBar.css
@@ -7,15 +7,13 @@
   justify-content: center;
 
 }
-.line-by-line-bar > div {
-  border: 1px solid;
-}
 
 .words-container {
   display: flex;
   margin-bottom: 0.5rem;
   font-family: 'Courier New', monospace; /* Use monospace font */
   font-size: 1rem;
+  color:rgb(255, 252, 252);
 }
 
 .child {
