--- a/sentiment_analysis/frontend/src/App.css
+++ b/sentiment_analysis/frontend/src/App.css
@@ -61,8 +61,8 @@
   padding: 2rem;
   border-radius: 5px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
-  width: 500px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 500px;
 }
 
 .text-input {
@@ -92,13 +92,18 @@
 }
 .text-display {
   width: 100%;
-  max-width: 600px;
+  max-width: 500px;
   margin: 2rem auto;
   padding: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
   background-color: #f7f7f7;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  border-radius: 5px;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+  width: 500px;
+  max-width: 100%;
 }
 
 .text-display h2 {
@@ -107,7 +112,7 @@
   font-size: 1.5rem;
 }
 
-.text-container {
+.result-container {
   padding: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -115,18 +120,16 @@
   overflow: auto;
   white-space: pre-wrap;
   word-wrap: break-word;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
 }
 
 .text-container pre {
   margin: 0;
   font-family: inherit;
   font-size: 1rem;
-}
-.progress-container {
-  display: flex;
-  flex: 1;
-  justify-content: center;
-  align-items: center;
 }
 
 .lines {
